[gd_scene load_steps=13 format=2]

[ext_resource path="res://start_screen/start_screen.gd" type="Script" id=1]
[ext_resource path="res://characters/players/Player_Lane_Animation.tscn" type="PackedScene" id=2]
[ext_resource path="res://start_screen/buttons/JumpButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://start_screen/buttons/UpDownButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://start_screen/buttons/LaneButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://backgrounds/BackgroundWoods.tscn" type="PackedScene" id=6]
[ext_resource path="res://start_screen/fonts/montserrat_eb_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://start_screen/buttons/ExitButton.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 1, 0.596078, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="StreamTexture" id=2]
flags = 4

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 8 )]

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1800.0
margin_bottom = 1000.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 1700.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.596078, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Jump For Left"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 140.0
margin_right = 1700.0
margin_bottom = 820.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 848.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="JumpButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 230.0
margin_right = 848.0
margin_bottom = 290.0
scene_to_load = "res://levels/JumpMovement.tscn"

[node name="UpDownButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 310.0
margin_right = 848.0
margin_bottom = 370.0

[node name="LaneButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 390.0
margin_right = 848.0
margin_bottom = 450.0
scene_to_load = "res://levels/LaneMovement.tscn"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 852.0
margin_right = 1700.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player_JustJump_Animation" parent="Menu/CenterRow/CenterContainer" instance=ExtResource( 2 )]
position = Vector2( 400, 350 )
scale = Vector2( 2, 2 )
animation = "idle"
frame = 2
playing = true

[node name="VersionLabel" type="Label" parent="Menu"]
visible = false
margin_top = 869.0
margin_right = 1700.0
margin_bottom = 900.0
size_flags_vertical = 10
size_flags_stretch_ratio = 1.01
custom_fonts/font = ExtResource( 7 )

[node name="ExitButton" parent="Menu" instance=ExtResource( 10 )]
margin_top = 840.0
margin_right = 1700.0
margin_bottom = 900.0

[node name="ParallaxBackground" parent="." instance=ExtResource( 6 )]

[node name="Logo" type="TextureRect" parent="."]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 1800.0
margin_bottom = 228.0
texture = SubResource( 2 )
stretch_mode = 4
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
